--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               <div class="collapse navbar-toggleable-md" id="navbarResponsive">
                 <ul class="nav navbar-nav menu float-lg-right" id="top-nav">
                   <li class="nav-item active">
-                    <a class="nav-link" href="#">  </a>
+                    <a class="nav-link" href="#">  Home</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#about">ABOUT</a>
